HTML Skeleton updated

--- a/Source/index.html
+++ b/Source/index.html
@@ -1,1 +1,16 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<title>Daniel Ignatov</title>
+</head>
+<body>
+	<div id="wrapper">
+		<div id="header">
+			<div id="person-name"></div>
+			<div id="person-title"></div>
+		</div>
+		<div id="footer">
+		</div>
+	</div>
+</body>
+</html>
