Updated html and css, added backgrounds

--- a/Source/index.html
+++ b/Source/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Daniel Ignatov</title>
+	<title>Home Page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="wrapper">
-		<div id="header">
-			<div id="person-name"></div>
-			<div id="person-title"></div>
+		<div id="content">
+			<div id="person-name-header"><h1><span class="name">Person</span> <span class="name">Name</span></h1></div>
+			<div id="person-title"><h2>Title</h2></div>
+			<div id="person-info"><span>Location: Sofia, Bulgaria; E-Mail: blabla@abv.bg Coding notebook: code.danielignatov.com; GitHub: github.com/danielignatov</span></div>
 		</div>
 		<div id="footer">
 		</div>
