Added additional stylization and some html tweaks

--- a/Source/index.html
+++ b/Source/index.html
@@ -4,13 +4,19 @@
 	<title>Home Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
+	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
 	<div id="wrapper">
 		<div id="content">
-			<div id="person-name-header"><h1><span class="name">Person</span> <span class="name">Name</span></h1></div>
-			<div id="person-title"><h2>Title</h2></div>
-			<div id="person-info"><span>Location: Sofia, Bulgaria; E-Mail: blabla@abv.bg Coding notebook: code.danielignatov.com; GitHub: github.com/danielignatov</span></div>
+			<div id="person-name-header"><h1>
+				<span class="name">Person</span> 
+				<span class="name">Name</span>
+			</h1></div>
+			<div id="person-title"><h2><span class="green">Job</span> Title</h2></div>
+			<div id="person-info"><span>
+				<p>Location: Sofia, Bulgaria; E-Mail: contact@email.com</p>
+				<p>Important/Telephone: <a href="#">importantlink.com</a>; Portfolio: <a href="#">portfolio.com/personname</a></p></span></div>
 		</div>
 		<div id="footer">
 		</div>
