Added footer foundation

--- a/Source/index.html
+++ b/Source/index.html
@@ -19,6 +19,8 @@
 				<p>Important/Telephone: <a href="#">importantlink.com</a>; Portfolio: <a href="#">portfolio.com/personname</a></p></span></div>
 		</div>
 		<div id="footer">
+			<div id="footer-info-left">Created by: Dani &#38; Nasko</div>
+			<div id="footer-info-right">2016</div>
 		</div>
 	</div>
 </body>
