--- a/Source/index.html
+++ b/Source/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
 	<div id="wrapper">
-		<div id="content">
-			<div id="person-name-header"><h1>
-				<span class="name">Person</span> 
-				<span class="name">Name</span>
+		<div id="content"  >
+			<div id="person-name-header" class="animate-top"><h1>
+				<span class="name" >Person</span>
+				<span class="name" >Name</span>
 			</h1></div>
-			<div id="person-title"><h2><span class="green">Job</span> Title</h2></div>
-			<div id="person-info"><span>
+			<div id="person-title" class="animate-top"><h2><span class="green">Job</span> Title</h2></div>
+			<div id="person-info" class="animate-top"><span>
 				<p>Location: Sofia, Bulgaria; E-Mail: contact@email.com</p>
 				<p>Important/Telephone: <a href="#">importantlink.com</a>; Portfolio: <a href="#">portfolio.com/personname</a></p></span></div>
 		</div>
 		<div id="footer">
-			<div id="footer-info-left">Created by: Dani &#38; Nasko</div>
+			<div id="footer-info-left">Created by: Daniel Ignatov &#38; Atanas Tankov</div>
 			<div id="footer-info-right">2016</div>
 		</div>
 	</div>
