Some finishing touches

--- a/Source/index.html
+++ b/Source/index.html
@@ -1,3 +1,4 @@
+<!-- Code written by Daniel Ignatov and Atanas Tankov. Photo taken by Daniel Ignatov -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,8 +20,8 @@
 				<p>Important/Telephone: <a href="#">importantlink.com</a>; Portfolio: <a href="#">portfolio.com/personname</a></p></span></div>
 		</div>
 		<div id="footer">
-			<div id="footer-info-left">Created by: Daniel Ignatov &#38; Atanas Tankov</div>
-			<div id="footer-info-right">2016</div>
+			<p>Created by: <a href="https://github.com/danielignatov/HTML-CSS-Personal-Front-Page" target="_blank">Daniel Ignatov</a> &#38; <a href="https://github.com/Nasun4o" target="_blank">Atanas Tankov</a></p>
+			<p>2016</p>
 		</div>
 	</div>
 </body>
