favicon path update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="./src/assets/css/solid.min.css">
     <link rel="stylesheet" href="./src/assets/css/brands.min.css">
-    <link rel='favicon' type='image/ico' href='%PUBLIC_URL%/favicon.ico' />
+    <link rel='favicon' type='image/ico' href='./favicon.ico' />
     <meta name="description" content="Software developer based in Sofia, Bulgaria">
     <meta name="keywords" content="Programmer, Ignatov, Asp.Net, MSSQL, Software, Developer">
     <meta name="author" content="Daniel Ignatov">
