--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <title>Daniel Ignatov | Software Developer</title>
     <link rel="stylesheet" href="./src/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./src/assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="./src/assets/css/solid.min.css">
-    <link rel="stylesheet" href="./src/assets/css/brands.min.css">
-    <link rel='favicon' type='image/ico' href='./favicon.ico' />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="description" content="Software developer based in Sofia, Bulgaria">
     <meta name="keywords" content="Programmer, Ignatov, Asp.Net, MSSQL, Software, Developer">
     <meta name="author" content="Daniel Ignatov">
