--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Daniel Ignatov | Software Developer</title>
-    <link rel="stylesheet" href="./src/assets/css/bootstrap.min.css">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="description" content="Software developer based in Sofia, Bulgaria">
-    <meta name="keywords" content="Programmer, Ignatov, Asp.Net, MSSQL, Software, Developer">
+    <meta name="keywords" content="Programmer, Ignatov, Asp.Net, MSSQL, Software, Developer, React, Dynamo">
     <meta name="author" content="Daniel Ignatov">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
